--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 Thumbs.db
 ehthumbs.db
 
+
 # Folder config file
 Desktop.ini
 
@@ -45,3 +46,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+out
